@@ -247,6 +247,8 @@ Release 0.91.0 - Unreleased
                (Ming Ma via garyh)
    HBASE-4341  HRS#closeAllRegions should take care of HRS#onlineRegions's
                weak consistency (Jieshan Bean)
+   HBASE-4297  TableMapReduceUtil overwrites user supplied options
+               (Jan Lukavsky)
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
